--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/linear</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/header_text</item>
         <!-- Status bar color. -->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
@@ -36,7 +36,7 @@
     
     <style name="Preview_Header_Text">
         <item name="android:textSize">24dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/header_text</item>
         <item name="textAllCaps">false</item>
         <item name="android:typeface">normal</item>
         <item name="fontFamily">@font/inter_extrabold</item>
