--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/clockData">
 
+
+    <fragment
+        android:id="@+id/signInEntryFragment"
+        android:name="com.autonture.bodyfitx_everybody_can_train.fragments.SignInEntryFragment"
+        android:label="fragment_sign_in_entry"
+        tools:layout="@layout/fragment_sign_in_entry" >
+        <action
+            android:id="@+id/action_signInEntryFragment_to_clockData"
+            app:destination="@id/clockData" />
+    </fragment>
+    <activity
+        android:id="@+id/clockData"
+        android:name="com.autonture.bodyfitx_everybody_can_train.ui.RightsVerif.ClockData"
+        android:label="activity_clock_data"
+        tools:layout="@layout/activity_clock_data" />
 </navigation>
