--- a/app/src/main/res/layout/fragment_data_entry.xml
+++ b/app/src/main/res/layout/fragment_data_entry.xml
@@ -10,6 +10,7 @@
         android:layout_marginTop="35dp"
         android:id="@+id/textView3"
         style="@style/Preview_Low_Text"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Welcome"
