--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="header_text">#1D1617</color>
 
     <color name="linear">#97B4FE</color>
+    <color name="linear_video">#6C88B3</color>
     <color name="linear_center">#97B4FE</color>
     <color name="linear_end">#97B4FE</color>
 
