edit recycler view

--- a/app/src/main/res/drawable/video_player.xml
+++ b/app/src/main/res/drawable/video_player.xml
@@ -22,163 +22,6 @@
       </aapt:attr>
     </path>
     <path
-        android:pathData="M0,0H390V182H0V0Z"
-        android:strokeAlpha="0.3"
-        android:fillColor="#000000"
-        android:fillAlpha="0.3"/>
-    <group>
-      <clip-path
-          android:pathData="M12,0L378,0A12,12 0,0 1,390 12L390,56.32A12,12 0,0 1,378 68.32L12,68.32A12,12 0,0 1,0 56.32L0,12A12,12 0,0 1,12 0z"/>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,46.42C-52.17,33.31 -6.13,25.26 66.88,22.34C149.37,19.03 187.69,44.3 264.94,38.1C321.72,33.55 308.33,21.99 352.13,14.01C388.9,7.32 413.94,4.09 460.91,0"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="46.42"
-              android:endX="61.63"
-              android:endY="-307.53"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,56.93C-52.17,43.82 -6.13,35.77 66.88,32.85C149.37,29.54 187.69,54.81 264.94,48.61C321.72,44.06 308.33,32.5 352.13,24.53C388.9,17.83 413.94,14.61 460.91,10.51"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="56.93"
-              android:endX="61.63"
-              android:endY="-297.02"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,53.43C-52.17,40.32 -6.13,32.27 66.88,29.34C149.37,26.04 187.69,51.31 264.94,45.11C321.72,40.56 308.33,29 352.13,21.02C388.9,14.33 413.94,11.1 460.91,7.01"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="53.43"
-              android:endX="61.63"
-              android:endY="-300.52"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,49.93C-52.17,36.81 -6.13,28.76 66.88,25.84C149.37,22.53 187.69,47.8 264.94,41.61C321.72,37.05 308.33,25.49 352.13,17.52C388.9,10.82 413.94,7.6 460.91,3.5"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="49.93"
-              android:endX="61.63"
-              android:endY="-304.02"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,16.64C3.69,29.76 47.57,37.8 117.18,40.73C195.82,44.03 232.35,18.77 306,24.96C360.12,29.52 347.36,41.08 389.11,49.05C424.17,55.75 448.04,58.97 492.82,63.07"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="16.64"
-              android:endX="96.26"
-              android:endY="351.77"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,6.13C3.69,19.25 47.57,27.29 117.18,30.22C195.82,33.52 232.35,8.26 306,14.45C360.12,19.01 347.36,30.57 389.11,38.54C424.17,45.23 448.04,48.46 492.82,52.55"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="6.13"
-              android:endX="96.26"
-              android:endY="341.26"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,9.63C3.69,22.75 47.57,30.8 117.18,33.72C195.82,37.03 232.35,11.76 306,17.96C360.12,22.51 347.36,34.07 389.11,42.04C424.17,48.74 448.04,51.96 492.82,56.06"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="9.63"
-              android:endX="96.26"
-              android:endY="344.76"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,13.14C3.69,26.25 47.57,34.3 117.18,37.23C195.82,40.53 232.35,15.26 306,21.46C360.12,26.01 347.36,37.57 389.11,45.55C424.17,52.24 448.04,55.47 492.82,59.56"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="13.14"
-              android:endX="96.26"
-              android:endY="348.27"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-    </group>
-    <path
-        android:pathData="M183.33,73.68C183.33,67.39 188.57,62.28 195,62.28C201.43,62.28 206.67,67.39 206.67,73.68C206.67,79.95 201.43,85.06 195,85.06C188.57,85.06 183.33,79.95 183.33,73.68ZM199.28,74.83C199.4,74.71 199.56,74.52 199.6,74.48C199.77,74.25 199.87,73.96 199.87,73.68C199.87,73.36 199.76,73.06 199.57,72.82C199.56,72.8 199.53,72.77 199.49,72.73C199.41,72.65 199.3,72.53 199.2,72.43C198.28,71.47 195.87,69.88 194.61,69.4C194.41,69.32 193.93,69.16 193.67,69.15C193.42,69.15 193.19,69.2 192.96,69.31C192.68,69.47 192.46,69.71 192.33,69.99C192.25,70.19 192.13,70.79 192.13,70.8C192.01,71.45 191.94,72.5 191.94,73.67C191.94,74.78 192.01,75.79 192.11,76.45C192.11,76.45 192.12,76.5 192.13,76.57C192.18,76.79 192.27,77.26 192.38,77.45C192.62,77.91 193.11,78.19 193.63,78.19H193.67C194.01,78.18 194.72,77.9 194.72,77.89C195.91,77.4 198.27,75.9 199.21,74.9L199.28,74.83Z"
-        android:fillColor="#F7F8F8"
-        android:fillType="evenOdd"/>
-    <path
         android:pathData="M-7,203C-7,169.31 22.82,142 59.61,142H330.39C367.18,142 397,169.31 397,203V208H-7V203Z"
         android:fillColor="#ffffff"/>
     <path
@@ -186,153 +29,10 @@
         android:strokeAlpha="0.1"
         android:fillColor="#1D1617"
         android:fillAlpha="0.1"/>
-    <group>
-      <clip-path
-          android:pathData="M12,74L378,74A12,12 0,0 1,390 86L390,130.32A12,12 0,0 1,378 142.32L12,142.32A12,12 0,0 1,0 130.32L0,86A12,12 0,0 1,12 74z"/>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,120.42C-52.17,107.31 -6.13,99.26 66.88,96.34C149.37,93.03 187.69,118.3 264.94,112.1C321.72,107.55 308.33,95.99 352.13,88.01C388.9,81.32 413.94,78.09 460.91,74"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="120.42"
-              android:endX="61.63"
-              android:endY="-233.53"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,130.93C-52.17,117.82 -6.13,109.77 66.88,106.85C149.37,103.54 187.69,128.81 264.94,122.61C321.72,118.06 308.33,106.5 352.13,98.53C388.9,91.83 413.94,88.61 460.91,84.51"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="130.93"
-              android:endX="61.63"
-              android:endY="-223.02"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,127.43C-52.17,114.32 -6.13,106.27 66.88,103.34C149.37,100.04 187.69,125.31 264.94,119.11C321.72,114.56 308.33,103 352.13,95.02C388.9,88.33 413.94,85.1 460.91,81.01"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="127.43"
-              android:endX="61.63"
-              android:endY="-226.52"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:strokeWidth="1"
-          android:pathData="M-70.91,123.93C-52.17,110.81 -6.13,102.76 66.88,99.84C149.37,96.53 187.69,121.8 264.94,115.61C321.72,111.05 308.33,99.49 352.13,91.52C388.9,84.82 413.94,81.6 460.91,77.5"
-          android:strokeAlpha="0.3"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.3">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="460.91"
-              android:startY="123.93"
-              android:endX="61.63"
-              android:endY="-230.02"
-              android:type="linear">
-            <item android:offset="0" android:color="#FFC58BF2"/>
-            <item android:offset="1" android:color="#FFEEA4CE"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,90.64C3.69,103.76 47.57,111.81 117.18,114.73C195.82,118.04 232.35,92.77 306,98.96C360.12,103.52 347.36,115.08 389.11,123.05C424.17,129.74 448.04,132.97 492.82,137.07"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="90.64"
-              android:endX="96.26"
-              android:endY="425.77"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,80.13C3.69,93.25 47.57,101.29 117.18,104.22C195.82,107.52 232.35,82.26 306,88.45C360.12,93.01 347.36,104.57 389.11,112.54C424.17,119.23 448.04,122.46 492.82,126.56"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="80.13"
-              android:endX="96.26"
-              android:endY="415.26"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,83.64C3.69,96.75 47.57,104.8 117.18,107.72C195.82,111.03 232.35,85.76 306,91.96C360.12,96.51 347.36,108.07 389.11,116.04C424.17,122.74 448.04,125.96 492.82,130.06"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="83.64"
-              android:endX="96.26"
-              android:endY="418.76"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-      <path
-          android:pathData="M-14.18,87.14C3.69,100.25 47.57,108.3 117.18,111.23C195.82,114.53 232.35,89.26 306,95.46C360.12,100.01 347.36,111.57 389.11,119.55C424.17,126.24 448.04,129.47 492.82,133.56"
-          android:strokeAlpha="0.8"
-          android:strokeWidth="1.2"
-          android:fillColor="#00000000"
-          android:fillAlpha="0.8">
-        <aapt:attr name="android:strokeColor">
-          <gradient 
-              android:startX="492.82"
-              android:startY="87.14"
-              android:endX="96.26"
-              android:endY="422.27"
-              android:type="linear">
-            <item android:offset="0" android:color="#FF92A3FD"/>
-            <item android:offset="1" android:color="#FF9DCEFF"/>
-          </gradient>
-        </aapt:attr>
-      </path>
-    </group>
+    <path
+        android:pathData="M195,142m-115,0a115,115 0,1 1,230 0a115,115 0,1 1,-230 0"
+        android:strokeAlpha="0.3"
+        android:fillColor="#ffffff"
+        android:fillAlpha="0.3"/>
   </group>
 </vector>
