--- a/app/src/main/res/layout/activity_workout_certain.xml
+++ b/app/src/main/res/layout/activity_workout_certain.xml
@@ -7,8 +7,13 @@
     tools:context=".ui.Workouts.WorkoutCertain">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:scrollbarSize="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -33,19 +38,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="22dp"
-                android:textSize="16dp"
                 android:text="@string/Workout_Name"
+                android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="@+id/imageButton"
                 app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
             <TextView
                 android:id="@+id/textVew12"
-                android:textSize="14dp"
                 style="@style/Preview_Low_Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/Workout_Info"
+                android:textSize="14dp"
                 app:layout_constraintStart_toStartOf="@+id/textView7"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -59,13 +64,79 @@
                 app:layout_constraintTop_toBottomOf="@+id/textVew12" />
 
             <ImageView
+                android:id="@+id/imageView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/purpule_high_card"
-                app:layout_constraintStart_toStartOf="@+id/imageView4"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
+            <TextView
+                android:id="@+id/textView8"
+                style="@style/Preview_Header_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Тебе нужно"
+                android:textSize="15dp"
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+            <TextView
+                style="@style/Preview_Low_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5 Предметов"
+                android:textSize="13dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView8"
+                app:layout_constraintEnd_toEndOf="@+id/imageView5"
+                app:layout_constraintTop_toTopOf="@+id/textView8" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/need_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
+                tools:listitem="@layout/need_item" />
+
+            <TextView
+                android:id="@+id/textView10"
+                style="@style/Preview_Header_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Упражнения"
+                android:textSize="15dp"
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/need_recycler_view" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                tools:listitem="@layout/task_list_item"
+                android:id="@+id/task_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/textView10"
+                android:layout_marginTop="20dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
     </ScrollView>
+
+    <Button
+        android:id="@+id/button"
+        style="@style/ButtonDefault"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/default_button"
+        android:text="@string/Welcome"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
