--- a/app/src/main/res/layout/fragment_data_entry.xml
+++ b/app/src/main/res/layout/fragment_data_entry.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.DataEntryFragment">
+    tools:context=".ui.RightsVerif.DataEntryFragment">
 
     <TextView
         android:layout_marginTop="35dp"
