--- a/app/src/main/res/layout/need_item.xml
+++ b/app/src/main/res/layout/need_item.xml
@@ -10,11 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/barbel_item"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="10dp"/>
+        android:layout_marginLeft="10dp"/>
 
     <TextView
         android:id="@+id/text_Need"
