--- a/app/src/main/res/layout/activity_workout_certain.xml
+++ b/app/src/main/res/layout/activity_workout_certain.xml
@@ -122,7 +122,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"
                 app:layout_constraintStart_toStartOf="@+id/textView10"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -130,7 +131,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonStart"
         style="@style/ButtonDefault"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
