--- a/app/src/main/res/layout/fragment_sign_in_entry.xml
+++ b/app/src/main/res/layout/fragment_sign_in_entry.xml
@@ -96,8 +96,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forgot_password"
-        android:textSize="12dp"
-        android:layout_marginTop="5dp"
+        android:textSize="15dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/lat_name_layout"
         app:layout_constraintStart_toStartOf="@+id/lat_name_layout"
         app:layout_constraintTop_toBottomOf="@+id/lat_name_layout" />
@@ -107,12 +107,12 @@
         style="@style/ButtonDefault"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/default_button"
         android:text="Бляб ля"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/lat_name_layout"
         app:layout_constraintStart_toStartOf="@+id/lat_name_layout"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="50dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
