--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainDashboards.MainDashboard">
 
+    <fragment
+        android:id="@+id/fragmentMain"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintBottom_toTopOf="@id/coordinator"/>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator"
