--- a/app/src/main/res/layout/fragment_data_entry.xml
+++ b/app/src/main/res/layout/fragment_data_entry.xml
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="OutlinedBox"
+        android:hint="Имя"
         android:theme="@style/EditTextThemeOverlay"
         app:errorTextAppearance="@style/ErrorTextAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="OutlinedBox"
+        android:hint="Логин"
         android:theme="@style/EditTextThemeOverlay"
         app:errorTextAppearance="@style/ErrorTextAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="OutlinedBox"
+        android:hint="Почта"
         android:theme="@style/EditTextThemeOverlay"
         app:errorTextAppearance="@style/ErrorTextAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +125,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="OutlinedBox"
+        android:hint="Пароль"
         android:theme="@style/EditTextThemeOverlay"
         app:errorTextAppearance="@style/ErrorTextAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -167,7 +167,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/default_button"
-        android:text="Бляб ля"
+        android:text="Зарегистрироваться"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/outlined_text_input_layout"
         app:layout_constraintStart_toStartOf="@+id/outlined_text_input_layout"
