--- a/app/src/main/res/layout/fragment_sign_in_entry.xml
+++ b/app/src/main/res/layout/fragment_sign_in_entry.xml
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="OutlinedBox"
+        android:hint="Логин"
         android:theme="@style/EditTextThemeOverlay"
         app:errorTextAppearance="@style/ErrorTextAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="OutlinedBox"
+        android:hint="Пароль"
         android:theme="@style/EditTextThemeOverlay"
         app:errorTextAppearance="@style/ErrorTextAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +110,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/default_button"
-        android:text="Бляб ля"
+        android:text="Войти"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/lat_name_layout"
         app:layout_constraintStart_toStartOf="@+id/lat_name_layout"
